objects/LLC_BI__Loan_Assumptions__c.object
<CustomObject>
    <description>The loan assumptions object stores details related to a particular loan that a piece of commercial real estate collateral is pledged to. The fields on this object are used to calculate debt payments that are used on the NOI statement and withing the Sensitivity Analysis features in the CRE Analysis application.</description>
    <fields>
        <fullName>LLC_BI__Amortization_months__c</fullName>
        <description>Used to calculate monthly and annual payment amounts that are displayed on the NOI statement and Sensitivity Analysis CRE Analysis Features.</description>
        <label>Amortization (months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate this object to the corresponding CRE Analysis bundle.</description>
        <label>Bundle</label>
        <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
        <relationshipLabel>Loan Assumptions</relationshipLabel>
        <relationshipName>Loan_Assumptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>Used to calculate monthly and annual payment amounts that are displayed on the NOI statement and Sensitivity Analysis CRE Analysis Features.</description>
        <label>Interest Rate (%)</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_DSCR__c</fullName>
        <description>The value entered in this input field is used in a calculation to determine the maximum loan amount given this DSCR.</description>
        <label>Policy DSCR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_LTV__c</fullName>
        <description>The value entered in this input field is linked to a row on the NOI statement that is used in a group to calculate the maximum loan amount.</description>
        <label>Policy LTV (%)</label>
        <precision>16</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Requested_Loan_Amount__c</fullName>
        <description>Used to calculate monthly and annual payment amounts that are displayed on the NOI statement and Sensitivity Analysis CRE Analysis Features.</description>
        <label>Requested Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Selected_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for calculating the debt service amount displayed on a NOI Statement and in the sensitivity analysis application.</description>
        <label>Selected Period</label>
        <referenceTo>LLC_BI__Spread_Statement_Period__c</referenceTo>
        <relationshipLabel>Loan Assumptions</relationshipLabel>
        <relationshipName>Loan_Assumptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>Unique key for this object.</description>
        <externalId>true</externalId>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Loan Assumptions</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Loan Assumptions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Assumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>